@startuml

title M90 UTILITIES LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

package "Diagnostics Package" as DiagnosticsPackage
{
    class Assert
    {
        + <<static>> inline void Fail(std::string_view message = "", std::source_location loc = std::source_location::current())
        + <<static>> inline void IsTrue(bool condition, std::string_view message = "", std::source_location loc = std::source_location::current())
        + <<static>> inline void IsFalse(bool condition, std::string_view message = "", std::source_location loc = std::source_location::current())
        + <<static>> inline void IsNotNull(void* pointer, std::string_view variableName = "", std::source_location loc = std::source_location::current())
        + <<static>> inline void IsNotNullptr(void* pointer, std::string_view variableName = "", std::source_location loc = std::source_location::current())
        + <<static>> inline void Equals(int real, int expected, std::string_view variableName = "", std::source_location loc = std::source_location::current())
        + <<static>> inline void NotEquals(int real, int expected, std::string_view variableName = "", std::source_location loc = std::source_location::current())
        + <<static>> inline void Not0(int real, std::string_view variableName = "", std::source_location loc = std::source_location::current())
        + <<static>> template<typename T, typename MinT, typename MaxT><<static>> inline void IsBetween(
            const T& value, const MinT& minValueIncluding, const MaxT& maxValueExcluding, const std::string_view& message = "",  std::source_location loc = std::source_location::current())
        + <<static>> template<typename Container><<static>> void AreUnique(const Container& values, std::string_view message = "", std::source_location loc = std::source_location::current())
        - <<static>> Halt()
    }

    class Debug
    {
        <<static>> + PrintUInt(std::string name, unsigned int value)
        <<static>> + PrintInt(std::string name, int value)
        <<static>> + PrintChar(std::string name, char value)
        <<static>> + PrintString(std::string name, std::string value)
        <<static>> + PrintText(std::string text)
        <<static>> + PrintNewLine()
        <<static>> - OutputBuffer()
        <<static>> - char _buf[256]
    }
}

Package "Utilities Package" as UtilitiesPackage
{
    class Algorithm
    {
        + <<static>> template<typename T> void Swap(T& a, T& b)
    }

    class ArrayUtilities
    {
        + <<static>> template<typename T> FindFirstIndexOf(const T* arr, int length, const T& value) : int
        + <<static>> template<typename T> FindFirstNonEqual(const T* a, const T* b, int length) : int
        + <<static>> template<typename T> CountDifferent(const T* a, const T* b, int length) : int
    }

    class MathUtilities
    {
        <<static>> + Wrap(uint32_t index, uint32_t max_value): int32_t
        <<static>> + template<typename TEnum> WrapEnum(TEnum value, int delta, int count) : TEnum
    }

    class StringUtilities
    {
        <<static>> Center(const std::string& text, size_t width) : std::string
        <<static>> CopyToBuffer(const std::string& text, char* buffer, int bufferSize)
        <<static>> CountDifferentCharacters(const std::string& a, const std::string& b) : int
    }
}

package BaseClasses
{
    class IDirty
    {
        + IDirty()
        + <<abstract>> IsDirty() : bool
        + <<abstract>> MarkDirty()
        + <<abstract>> ClearDirty()
        - bool _isDirty
    }

    class Dirty
    {
        + Dirty()
        + IsDirty() : bool
        + MarkDirty()
        + ClearDirty()
        - bool _isDirty
    }

    Dirty -u-|> IDirty

    class IInitializable
    {
        + IInitializable()
        + <<abstract>> IsInitialized() : bool
        + <<abstract>> MarkInitialized()
        - bool _isInitialized
    }

    class Initializable
    {
        + Initializable()
        + IsInitialized() : bool
        + MarkInitialized()
        - bool _isInitialized
    }

    Initializable -u-|> IInitializable
}

package "ESP Package" as EspPackage
{
    class Task
    {
        + Task()
        + SetRtosTask(RtosTask& rtosTask)
        + GetRtosTask() RtosTask&
        + <<abstract>> Initialize()
        + <<abstract>> Run() 
        # GetRtosTask() : RtosTask&
    }

    class RtosTask <<M80 Services>>

    Task *-- RtosTask
}

package "Time Package" as TimePackage
{
    class TimeUtilities
    {
        <<static>> GetCurrentTimeInUs() : uint64_t
        <<static>> GetUsBetween(uint64_t fromUs, uint64_t toUs) : uint64_t
        <<static>> GetUsSince(uint64_t startUs) : uint64_t
        <<static>> FrequencyToIntervalUs(uint32_t frequencyInHz) : uint64_t
    }
}

Assert -u[hidden]-- Task
Assert -u[hidden]-- TimeUtilities
BaseClasses -u[hidden]-- UtilitiesPackage
IDirty -u[hidden]--- Debug


@enduml
